# discord-fetch-bot

./: .env.example  .gitignore  Dockerfile  README.md  deploy_haos.ps1  docker-compose.yml  main.py  requirements.txt  upload.md
.github/agents/: accessibility-tester.agent.md  ad-security-reviewer.agent.md  agent-organizer.agent.md  ai-engineer.agent.md  angular-architect.agent.md  api-designer.agent.md  api-documenter.agent.md  architect-reviewer.agent.md  azure-infra-engineer.agent.md  backend-developer.agent.md  blockchain-developer.agent.md  build-engineer.agent.md  chaos-engineer.agent.md  cli-developer.agent.md  cloud-architect.agent.md  code-reviewer.agent.md  competitive-analyst.agent.md  compliance-auditor.agent.md  context-manager.agent.md  cpp-pro.agent.md  csharp-developer.agent.md  data-analyst.agent.md  data-engineer.agent.md  data-researcher.agent.md  data-scientist.agent.md  database-administrator.agent.md  database-optimizer.agent.md  debugger.agent.md  dependency-manager.agent.md  deployment-engineer.agent.md  devops-engineer.agent.md  devops-incident-responder.agent.md  django-developer.agent.md  documentation-engineer.agent.md  dotnet-core-expert.agent.md  dotnet-framework-4.8-expert.agent.md  dx-optimizer.agent.md  electron-pro.agent.md  (+81 more)
.github/skills/memory-bank-management/scripts/: __init__.py  archive_sessions.py  distill_lessons.py  init_memory_bank.py  pyproject.toml  sync_context.py  validate_memory_bank.py
memory-bank/: README.md  SESSION.md  activeContext.md  log.md  master-plan.md  projectbrief.md
tests/: test_main.py
(+262 files in other folders)
