[project]
name = "memory-bank-scripts"
version = "0.1.0"
description = "Scripts for managing memory-bank lifecycle operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
init-memory-bank = "init_memory_bank:app"
archive-sessions = "archive_sessions:app"
validate-memory-bank = "validate_memory_bank:app"
distill-lessons = "distill_lessons:app"
sync-context = "sync_context:app"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
